Fix design bug in how widgets are styled
Set overflow to hidden to prevent widget titles from visually spilling out of their container.

--- a/news-posts.less
+++ b/news-posts.less
@@ -31,7 +31,7 @@
 ***  ────────────────────────────────────────────────────────────────────────────────────────────
 ***  §1: Primary news feed & posts: Articles & components......................................42
 ***  §2: Primary news feed & posts: Widgets & components......................................145
-***  §3: Secondary news feeds (via WSUWP-Content-Syndicate plugin)............................205
+***  §3: Secondary news feeds (via WSUWP-Content-Syndicate plugin)............................206
 ***  ───────────────────────────────────────────────────────────────────────────────────────────────
 **/
 
@@ -152,6 +152,7 @@
 					0 0 0 2px rgba(0,0,0,.2),
 					3px 4px 4px rgba(0,0,0,.25) !important;
 		.padding(@pSize-500mx, "all");
+		overflow: hidden;
 
 		&.widget_recent_entries {
 			ul {
